--- a/Circle.yml
+++ b/Circle.yml
@@ -1,2 +1,4 @@
-general:
-  build_dir: api
+test:
+  override:
+    - mkdir -p $CIRCLE_TEST_REPORTS/cucumber
+    - bundle exec cucumber --format json --out $CIRCLE_TEST_REPORTS/cucumber/tests.cucumber
